kubernetes/platform/base/operators/garage-operator/instance/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: ingress
      sectionName: websecure
      kind: Gateway

  hostnames:
    - garage.${main_domain}
    - garage.${second_domain}

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: / # See if we only allow specific buckets

      backendRefs:
        - name: garage-gateway
          port: ${GARAGE_S3_PORT}
